--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -54,6 +54,7 @@
   }) }}
 
   {% block breadcrumbs %}{% endblock %}
+  {% block backLink %}{% endblock %}
   {% block afterPhaseBanner %}{% endblock %}
 {% endblock %}
 
