--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -1,12 +1,9 @@
 {% extends "layout.html" %}
 {% set title = 'About this course' %}
 {% block pageTitle %}{{ title }}{% endblock %}
+{% block backLink %}{{ macros.backLink(course.path) }}{% endblock %}
 
 {% block content %}
-
-
-  <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="govuk-back-link">Back</a>
-
   <h1 class="govuk-heading-xl">
     <span class="heading-secondary">{{ course.name | safe }} ({{ course.programmeCode }})</span>
     {{ title }}
