--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -1,11 +1,9 @@
 {% extends "layout.html" %}
 {% set title = 'Requirements and eligibility' %}
 {% block pageTitle %}{{ title }}{% endblock %}
+{% block backLink %}{{ macros.backLink(course.path) }}{% endblock %}
 
 {% block content %}
-
-
-  <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="govuk-back-link">Back</a>
 
   <h1 class="govuk-heading-xl">
     <span class="heading-secondary">{{ course.name | safe }} ({{ course.programmeCode }})</span>
