--- a/app/views/course/vacancies-locations.html
+++ b/app/views/course/vacancies-locations.html
@@ -1,12 +1,9 @@
 {% extends "layout.html" %}
 {% set title = 'Edit vacancies' %}
 {% block pageTitle %}{{ title }}{% endblock %}
+{% block backLink %}{{ macros.backLink() }}{% endblock %}
 
 {% block content %}
-
-
-  <a href="/" class="govuk-back-link">Back</a>
-
   <h1 class="govuk-heading-xl">
     <span class="heading-secondary">{{ course.name | safe }} ({{ course.programmeCode }})</span>
     {{ title }}
