Update heading caption classes

--- a/app/views/course-not-running.html
+++ b/app/views/course-not-running.html
@@ -17,7 +17,7 @@
 
 {% block content %}
   <h1 class="govuk-heading-xl">
-    <span class="heading-secondary">{{ course.options }}</span>
+    <span class="govuk-caption-xl">{{ course.options }}</span>
     {{ title }}
   </h1>
 
