--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -6,7 +6,7 @@
 {% block content %}
 
   <h1 class="govuk-heading-xl">
-    <span class="heading-secondary">{{ course.name | safe }} ({{ course.programmeCode }})</span>
+    <span class="govuk-caption-xl">{{ course.name | safe }} ({{ course.programmeCode }})</span>
     {{ title }}
   </h1>
 
