--- a/app/views/course/vacancies.html
+++ b/app/views/course/vacancies.html
@@ -99,7 +99,7 @@
   {% endif %}
 
   <h1 class="govuk-heading-xl">
-    <span class="heading-secondary">{{ course.name | safe }} ({{ course.programmeCode }})</span>
+    <span class="govuk-caption-xl">{{ course.name | safe }} ({{ course.programmeCode }})</span>
     {{ title }}
   </h1>
 
