--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -13,7 +13,7 @@
 
   <h1 class="govuk-heading-xl" style="margin-top: 1.25em; margin-bottom: 0.55556em">
     {{ course.name }} with {{ data['training-provider-name'] }}
-    {% if not accrediting.selfAccrediting %}<span class="heading-secondary">Accredited by {{ accrediting.name }}</span>{% endif %}
+    {% if not accrediting.selfAccrediting %}<span class="govuk-caption-xl">Accredited by {{ accrediting.name }}</span>{% endif %}
   </h1>
 
   <dl class="aligned" style="margin-top: 60px;">
