--- a/app/views/about-your-organisation/contact.html
+++ b/app/views/about-your-organisation/contact.html
@@ -7,7 +7,7 @@
 {% include "about-your-organisation/_errors.html" %}
 
 <h1 class="govuk-heading-xl">
-  <span class="heading-secondary">{{ data['training-provider-name'] }}</span>
+  <span class="govuk-caption-xl">{{ data['training-provider-name'] }}</span>
   {{ title }}
 </h1>
 
