--- a/app/views/course.html
+++ b/app/views/course.html
@@ -59,7 +59,7 @@
   </div> -->
 
   <h1 class="govuk-heading-xl">
-    <span class="heading-secondary">{{ course.options }}</span>
+    <span class="govuk-caption-xl">{{ course.options }}</span>
     {{ title }}
   </h1>
 
