--- a/app/views/course/fees-and-length.html
+++ b/app/views/course/fees-and-length.html
@@ -7,7 +7,7 @@
   {% include "course/_errors.html" %}
 
   <h1 class="govuk-heading-xl">
-    <span class="heading-secondary">{{ course.name | safe }} ({{ course.programmeCode }})</span>
+    <span class="govuk-caption-xl">{{ course.name | safe }} ({{ course.programmeCode }})</span>
     {{ title }}
   </h1>
 
