--- a/app/views/organisation-details.html
+++ b/app/views/organisation-details.html
@@ -3,7 +3,7 @@
 
 {% block content %}
   <h1 class="govuk-heading-xl">
-    <span class="heading-secondary">{{ data['training-provider-name'] }}</span>
+    <span class="govuk-caption-xl">{{ data['training-provider-name'] }}</span>
     Organisation details
   </h1>
 
