Update phase tag classes

--- a/app/views/example-states.html
+++ b/app/views/example-states.html
@@ -33,7 +33,7 @@
           <span class="govuk-body-s">PGCE with QTS full time</span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
         <td class="nowrap">
           <a href="#">Yes – view online</a>
@@ -52,7 +52,7 @@
           <span class="govuk-body-s">QTS full time</span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
         <td class="nowrap">
           <a href="#">Yes – view online</a>
@@ -71,7 +71,7 @@
           <span class="govuk-body-s">PGCE with QTS full time</span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-no-content">New</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-no-content">New</span>
         </td>
         <td class="govuk-table__cell">
           No – still in draft
@@ -88,7 +88,7 @@
           <span class="govuk-body-s">PGCE with QTS full time</span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
         <td class="nowrap">
           <a href="#">Yes – view online</a>
@@ -107,7 +107,7 @@
           <span class="govuk-body-s">QTS full time</span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-draft">Draft</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-draft">Draft</span>
         </td>
         <td class="govuk-table__cell">
           No – still in draft
@@ -124,7 +124,7 @@
           <span class="govuk-body-s">QTS full time</span>
         </td>
         <td class="nowrap">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published&nbsp;*</span><br />
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-published">Published&nbsp;*</span><br />
           <span class="govuk-body-s">* Unpublished changes</span>
         </td>
         <td class="nowrap">
@@ -144,7 +144,7 @@
           <span class="govuk-body-s">QTS full time</span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-not-running">Withdrawn</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-not-running">Withdrawn</span>
         </td>
         <td class="nowrap">
           No – withdrawn
@@ -163,7 +163,7 @@
           <span class="govuk-body-s">QTS full time</span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-no-content">Rollover</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-no-content">Rollover</span>
         </td>
         <td class="govuk-table__cell">
         </td>
