--- a/app/views/history/publish-states.html
+++ b/app/views/history/publish-states.html
@@ -32,7 +32,7 @@
           <span class="govuk-body-s">QTS full time</span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-no-content">New</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-no-content">New</span>
         </td>
         <td class="govuk-table__cell">
         </td>
@@ -47,7 +47,7 @@
           <span class="govuk-body-s">QTS full time</span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-draft">Draft</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-draft">Draft</span>
         </td>
         <td class="govuk-table__cell">
         </td>
@@ -62,7 +62,7 @@
           <span class="govuk-body-s">QTS full time – <a href="#">View on website</a></span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-draft">Draft #2</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-draft">Draft #2</span>
         </td>
         <td class="govuk-table__cell">
           10 August 2018
@@ -80,7 +80,7 @@
           <span class="govuk-body-s">QTS full time – <a href="#">View on website</a></span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
         <td class="govuk-table__cell">
           10 August 2018
@@ -98,7 +98,7 @@
           <span class="govuk-body-s">QTS full time – <a href="#">View on website</a></span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
         <td class="govuk-table__cell">
           10 August 2018
@@ -116,7 +116,7 @@
           <span class="govuk-body-s">QTS full time – <a href="#">View on website</a></span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
         </td>
         <td class="govuk-table__cell">
           10 August 2018
@@ -134,7 +134,7 @@
           <span class="govuk-body-s">QTS full time</span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-not-running">Withdrawn</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-not-running">Withdrawn</span>
         </td>
         <td class="govuk-table__cell">
           Withdrawn on<br />10 August 2018
@@ -152,7 +152,7 @@
           <span class="govuk-body-s">QTS full time</span>
         </td>
         <td class="govuk-table__cell">
-          <span class="phase-tag phase-tag-small phase-tag-table phase-tag-no-content">Rollover</span>
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-no-content">Rollover</span>
         </td>
         <td class="govuk-table__cell">
         </td>
