--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -51,14 +51,14 @@
         </td>
         <td class="govuk-table__cell">
           {% for type in data[school.code + '-type'] %}
-            <span class="phase-tag phase-tag-small">{{ type }}</span><br />
+            <span class="govuk-tag phase-tag-small">{{ type }}</span><br />
           {% endfor %}
           {% if not data[school.code + '-type'] %}
-            <span class="phase-tag phase-tag-small phase-tag-no-content">None</span>
+            <span class="govuk-tag phase-tag-small phase-tag-no-content">None</span>
           {% endif %}
         </td>
         <!-- <td class="govuk-table__cell">5 courses</td>
-        <td class="govuk-table__cell"><span class="phase-tag phase-tag-small phase-tag-no-content">Empty</span></td> -->
+        <td class="govuk-table__cell"><span class="govuk-tag phase-tag-small phase-tag-no-content">Empty</span></td> -->
       </tr>
       {% endfor %}
     </tbody>
