--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -115,7 +115,7 @@
 <div class="add-double-bottom-margin status-box">
   {% if state == 'draft' %}
     <div class="unpublished-changes">
-      <span class="phase-tag phase-tag-draft add-bottom-margin">Draft</span>
+      <span class="govuk-tag phase-tag-draft add-bottom-margin">Draft</span>
       <p>You have unpublished changes.</p>
       <p class="add-top-margin">Last saved:<br />{{ today() }} by Jane Doe</p>
     </div>
@@ -123,7 +123,7 @@
   {% endif %}
 
   {% if state == 'published' %}
-    <span class="phase-tag phase-tag-published add-bottom-margin">Published</span>
+    <span class="govuk-tag phase-tag-published add-bottom-margin">Published</span>
   {% endif %}
   {% if publishedBefore or state == 'published' %}
     <p>Last published:<br />{{ today() }} by Rita Cosca</p>
@@ -132,7 +132,7 @@
   {% endif %}
 
   {% if state == 'new' %}
-    <span class="phase-tag phase-tag-no-content add-bottom-margin">Empty</span>
+    <span class="govuk-tag phase-tag-no-content add-bottom-margin">Empty</span>
     <p>You need to complete and publish this information.</p>
     <hr class="govuk-section-break govuk-section-break--visible" />
   {% endif %}
@@ -156,14 +156,14 @@
 {% macro coursePublish(state = 'new', publishedBefore = false, previewLink = '#', publishLink = '#') %}
 <div class="add-double-bottom-margin status-box">
   {% if state == 'draft' %}
-    <span class="phase-tag phase-tag-draft add-bottom-margin">Draft</span>
+    <span class="govuk-tag phase-tag-draft add-bottom-margin">Draft</span>
     <p>You have unpublished changes.</p>
     <p class="add-top-margin">Last saved:<br />{{ today() }} by Jane Doe</p>
     <hr class="govuk-section-break govuk-section-break--visible" />
   {% endif %}
 
   {% if state == 'published' %}
-    <span class="phase-tag phase-tag-published add-bottom-margin">Published</span>
+    <span class="govuk-tag phase-tag-published add-bottom-margin">Published</span>
   {% endif %}
 
   {% if publishedBefore or state == 'published' %}
@@ -172,7 +172,7 @@
   {% endif %}
 
   {% if state == 'new' %}
-    <span class="phase-tag phase-tag-no-content add-bottom-margin">Empty</span>
+    <span class="govuk-tag phase-tag-no-content add-bottom-margin">Empty</span>
     <p>You need to complete and publish this information.</p>
     <hr class="govuk-section-break govuk-section-break--visible" />
   {% endif %}
