--- a/app/views/new/confirm.html
+++ b/app/views/new/confirm.html
@@ -1,12 +1,9 @@
 {% set title = 'Check your answers before confirming' %}
 {% extends "layout.html" %}
 {% block pageTitle %}{{ title }}{% endblock %}
+{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
-
-
-  <a href="{{ paths.back }}" class="govuk-back-link">Back</a>
-
   <form action="{{ paths.next }}" method="post">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
