--- a/app/views/new/duration.html
+++ b/app/views/new/duration.html
@@ -1,12 +1,9 @@
 {% set title = 'Which phase is this course for?' %}
 {% extends "layout.html" %}
 {% block pageTitle %}{{ title }}{% endblock %}
+{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
 
 {% block content %}
-
-
-  <a href="/new/qualifications" class="govuk-back-link">Back</a>
-
   <h1 class="govuk-heading-xl">
     {{ title }}
   </h1>
