--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -380,24 +380,27 @@
 
 {% macro textarea(id, label, rows, helpText = false, maxWords = 50, errors = false) %}
   {% set e = error(id, errors) %}
-
-  <div class="govuk-form-group{% if e %} govuk-form-group--error{% endif %}">
-    <label class="govuk-label govuk-label--s" for="{{id}}">{{label}}</label>
-    {% if helpText %}
-      <span class="govuk-hint">{{helpText}}</span>
-    {% endif %}
-    {% if e %}
-      <span class="govuk-error-message">
-        {{ e.title }}
+  <div class="govuk-character-count" data-module="character-count" data-maxwords="{{ maxWords }}">
+    <div class="govuk-form-group{% if e %} govuk-form-group--error{% endif %}">
+      <label class="govuk-label govuk-label--s" for="{{id}}">{{label}}</label>
+      {% if helpText %}
+        <span class="govuk-hint">{{helpText}}</span>
+      {% endif %}
+      {% if e %}
+        <span class="govuk-error-message">
+          {{ e.title }}
+        </span>
+      {% endif %}
+      <div class="textarea-wrapper">
+        <textarea
+          class="govuk-textarea js-character-count"
+          rows="{{ rows }}"
+          name="{{ id }}"
+          id="{{ id }}">{{ value(id) }}</textarea>
+      </div>
+      <span id="{{ id }}-info" class="govuk-hint govuk-character-count__message" aria-live="polite">
+        You can enter up to {{ maxWords }} words
       </span>
-    {% endif %}
-    <div class="textarea-wrapper">
-      <textarea
-        class="govuk-textarea js-char-count"
-        rows="{{ rows }}"
-        name="{{ id }}"
-        id="{{ id }}"
-        data-maxwords="{{ maxWords }}">{{ value(id) }}</textarea>
     </div>
   </div>
 {% endmacro %}
