--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -23,18 +23,20 @@
     </dd>
     <dt>Qualification:</dt>
     <dd>
-      <details role="group">
+      <details class="govuk-details">
         {% if 'PGCE' in course.options[0] %}
-          <summary style="margin-bottom: 0;" role="govuk-button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">PGCE with QTS</span></summary>
-
-          <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true">
+          <summary class="govuk-details__summary">
+            <span class="govuk-details__summary-text">PGCE with QTS</span>
+          </summary>
+          <div class="govuk-details__text">
               <p>A postgraduate certificate in education (PGCE) with qualified teacher status (QTS) allows you to teach in England, Scotland, Wales and Northern Ireland. It’s also recognised internationally.</p>
               <p>Many PGCE courses include credits that count toward a Master’s degree.</p>
           </div>
         {% else %}
-          <summary style="margin-bottom: 0;" role="govuk-button" aria-controls="details-content-0" aria-expanded="true"><span class="summary">QTS</span></summary>
-
-          <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="false">
+          <summary class="govuk-details__summary">
+            <span class="govuk-details__summary-text">QTS</span>
+          </summary>
+          <div class="govuk-details__text">
               <p>Qualified teacher status (QTS) allows you to teach in state schools in England.</p>
               <p>If you want to teach in the rest of the UK or internationally, consider the qualification PGCE (postgraduate certificate in education) with QTS instead.</p>
           </div>
