--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -10,56 +10,56 @@
     <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-m">December 2018</h2>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/vacancies">Vacancies</a>
       </h3>
       <p>
         First design for changing vacancies at each training location on a course.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/publish-states">Rethinking the publish workflow</a>
       </h3>
       <p>
         What does the publish workflow look like after UCAS transition?
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/edit-title">New course wizard: Confirming course title</a>
       </h3>
       <p>
         Moving the course title fields into the wizard
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/minimum-course-requirements">New course wizard: Minimum course requirements</a>
       </h3>
       <p>
         Choose the minimum course requirements from the new course wizard
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/specific-requirements">UCAS: Specific course requirements</a>
       </h3>
       <p>
         Documentation on minimum qualifications settings in UCAS web-link and apply
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/new-course-locations">New course wizard: Training locations</a>
       </h3>
       <p>
         Choosing training locations from the new course wizard
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/new-course-2">New course wizard – Iteration 6 December</a>
       </h3>
       <p>
         Consider route into and out of wizard
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/new-course">New course wizard</a>
       </h3>
       <p>
@@ -68,35 +68,35 @@
 
       <h2 class="govuk-heading-m">November 2018</h2>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/ucas-onboarding-form">UCAS training provider onboarding form</a>
       </h3>
       <p>
         Reference: The form completed by new training providers when they begin offering initial teacher training courses.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/schools-autocomplete">Schools autocomplete</a>
       </h3>
       <p>
         An autocomplete for selecting partner schools quickly.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/location-research">Location labels and survey research</a>
       </h3>
       <p>
         First attempts to understand location with a classification exercise.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/the-location-problem">The location problem</a>
       </h3>
       <p>
         Location is a complex issue, we begin to break it down.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/hide-discontinued-locations">Hide discontinued training locations</a>
       </h3>
       <p>
@@ -105,14 +105,14 @@
 
       <h2 class="govuk-heading-m">October 2018</h2>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/choose-outcome">Edit a course outcome</a>
       </h3>
       <p>
         Allow providers to choose an outcome, instead of using our inferred one.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/course-not-running-oct-15">Course statuses – Iteration 15 October</a>
       </h3>
       <p>
@@ -121,28 +121,28 @@
 
       <h2 class="govuk-heading-m">September 2018</h2>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/copy-content-from-another-course-14-sept">Copy content from another course – Iteration 14 September</a>
       </h3>
       <p>
         Make the copy feature easier to find.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/copy-content-from-another-course-live">Copy content from another course (Live version)</a>
       </h3>
       <p>
         We changed this feature when we built it.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/enrichment-sept-6">Enrichment release – 6 September</a>
       </h3>
       <p>
         Publish courses, as it was released with the course enrichment feature.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/welcome-email">Welcome email</a>
       </h3>
       <p>
@@ -151,98 +151,98 @@
 
       <h2 class="govuk-heading-m">August 2018</h2>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/contact-details">Contact details</a>
       </h3>
       <p>
         Allow users to edit their contact details
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/organisation-iteration-aug-24">Iteration - 24 August</a>
       </h3>
       <p>
         Split homepage into tasks, Step 1 and Step 2
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/iteration-aug-23">Iteration - 23 August</a>
       </h3>
       <p>
         Trying to bring ‘About your organisation’ into the user journey
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/user-research-aug-22">User research - 22 August</a>
       </h3>
       <p>
         Testing markdown, SimpleMDE and publishing workflow
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/who-did-what-when">Who did what and when</a>
       </h3>
       <p>
         The beginnings of an audit trail for content.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/preview-course">Preview course</a>
       </h3>
       <p>
         Screenshots showing different preview states depending on course type and state.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/needs-behind-fields">Fields we ask for and why</a>
       </h3>
       <p>
         Documentation of needs around each course field
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/copy-content-from-another-course">Copy content from another course</a>
       </h3>
       <p>
         Design for copying form values from one course to another
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/terms-agreement">Terms agreement</a>
       </h3>
       <p>
         A user must agree to terms before enriching.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/formatting">Formatting</a>
       </h3>
       <p>
         Paragraphs, lists and links.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/no-more-folding">No more course folding</a>
       </h3>
       <p>
         Reasoning behind not folding courses and unfolded course designs.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/success-messaging">Success messaging</a>
       </h3>
       <p>
         Messages we show after a successful save or publish.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/course-not-running">Course statuses – Iteration 3 August</a>
       </h3>
       <p>
         A more indepth look at UCAS course status and how it’ll affect publishing.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/story-map-aug-1">Story map – 1 August</a>
       </h3>
       <p>
@@ -251,63 +251,63 @@
 
       <h2 class="govuk-heading-m">July 2018</h2>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/validating-on-publish">Validating on publish</a>
       </h3>
       <p>
         How validation works when a user tries to publish without the required fields.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/publish-changes">Publishing workflow</a>
       </h3>
       <p>
         Workflow and designs for different publish states.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/ucas-course-status">Course statuses</a>
       </h3>
       <p>
         An iteration on the <a href="/history/check-ucas-data">onboarding design</a> (read-only) to include course status.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/salary-and-fees">Salary and fees</a>
       </h3>
       <p>
         Designs for different fields for salaried and fee paying courses.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/no-known-organisation">When a user isn’t recognised</a>
       </h3>
       <p>
         Designs for when a user’s email isn’t in our whitelist.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/templates">Course templates</a>
       </h3>
       <p>
         Use templates to share information between courses.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/about-your-organisation">About your organisation</a>
       </h3>
       <p>
         Share organisation information between courses and split the organisation page across tabs.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/multiple-organisations">Managing multiple organisations</a>
       </h3>
       <p>
         Some users will be responsible for courses from multiple organisations. eg SCITT-schools.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/request-access-iteration-june-29">Request access</a>
       </h3>
       <p>
@@ -316,120 +316,120 @@
 
       <h2 class="govuk-heading-m">June 2018</h2>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/check-ucas-data">Check your UCAS data (Initial launch)</a>
       </h3>
       <p>
         A read-only version of the tool where users can validate their imported courses and request access for users.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/iteration-june-28">Iteration 28 June</a>
       </h3>
       <p>
         Add character counts and refine preview.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/iteration-june-26">Iteration 26 June</a>
       </h3>
       <p>
         Separate courses by accrediting provider. Provide explicit fields for each course offered.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/read-only">Draft of a read only version</a>
       </h3>
       <p>
         An initial pass at what a read only view of the service could have looked like.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/qa-draft">Draft of the QA process</a>
       </h3>
       <p>
         Submit to QA and example pass and fail emails
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/school-direct-view">School Direct view</a>
       </h3>
       <p>
         School Direct routes are the most complex. List schools, show multiple UCAS courses per subject, show folded course summary.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/simplified-university-view">A university’s view</a>
       </h3>
       <p>
         Universities are the simplest provider. There are no schools to apply to and <a href="/history/imported-from-ucas">no course folding</a>.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/course-field-guidance">Contextual guidance for course fields</a>
       </h3>
       <p>
         A first pass at providing some guidance for each course field. Starting from the <a href="/history/original-onboarding">original onboarding</a> guidance.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/details-from-ucas">Course page showing what’s been imported from UCAS</a>
       </h3>
       <p>
         Indicate the raw information we’ve received from UCAS, begin to explain where this must be edited and how we are handling that information.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/sign-in-pre-register-user">Sign-in: Invite a user</a>
       </h3>
       <p>This is the approach we attempted first. Because of limitations with the invite email and users ending up at a dead-end, we switched to self-registration.</p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/sign-in-self-serve-registration">Sign-in: User registers themself</a>
       </h3>
       <p>We send users a sign-up link so they can register and then be forwarded on to our service.</p>
 
       <h2 class="govuk-heading-m">May 2018 and earlier</h2>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/imported-from-ucas">Course folding and UCAS course details</a>
       </h3>
       <p>Following the definition of a course, documentation on how we might fold courses based on UCAS data.</p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/what-is-a-course">What is a course?</a>
       </h3>
       <p>Work to define our definition of a course.</p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/course-with-variants">Course with variants and field guidance</a>
       </h3>
       <p>
         Based on UCAS course descriptions it’s often unclear how courses vary between qualification, funding, subject and accrediting provider – use fields on a course page to prompt providers to indicate these differences, helping candidates make an informed choice.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/courses-and-tabs">Courses and tabs</a>
       </h3>
       <p>
         Exploration of a home page view with tabs for courses, schools, default course and organisation details.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/original-onboarding">Original onboarding</a>
       </h3>
       <p>
         The spreadsheet sent to providers rendered as a single page form.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/course-with-parts">Course with parts</a>
       </h3>
       <p>
         A course listing and a course view where data is broken down into parts to complete.
       </p>
 
-      <h3 class="govuk-heading-s">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/new-course-wizard">Experimental new course wizard</a>
       </h3>
       <p>
