Update error summaries

--- a/app/views/about-your-organisation.html
+++ b/app/views/about-your-organisation.html
@@ -27,19 +27,10 @@
   {% endset %}
 
   {% if data['about-your-organisation-show-publish-errors'] and errors.length > 0 %}
-  <div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
-    <h3 class="govuk-heading-m error-summary-heading" id="error-summary-heading-example-1">
-      We couldn’t publish this because some information was missing
-    </h3>
-    <p>
-      Fix the following problems and try publishing again:
-    </p>
-    <ul class="error-summary-list">
-      {% for error in errors %}
-      <li><a href="{{ error.link }}">{{ error.title }}</a></li>
-      {% endfor %}
-    </ul>
-  </div>
+    {{ govukErrorSummary({
+      titleText: "We couldn’t publish this because some information was missing",
+      errorList: errors
+    }) }}
   {% endif %}
 
   {% if justPublished %}
